--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "templify"
-version = "0.3.1"
+version = "0.4.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -9,3 +9,4 @@ edition = "2021"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 self-replace = "1.3.6"
 serde_json = "1.0.1"
+chrono = "0.4.19"
