--- a/.github/workflows/on_release.yml
+++ b/.github/workflows/on_release.yml
@@ -11,7 +11,7 @@ env:
 jobs:
     upload-release:
         runs-on: ubuntu-latest
-        needs: [build-linux, build-windows]
+        needs: [build-linux, build-windows, macos-linux]
 
         steps:
             - uses: actions/checkout@v2
@@ -34,6 +34,7 @@ jobs:
                   artifacts: |
                       uploads/tpy.exe
                       uploads/tpy
+                      uploads/tpy_macos
                   token: ${{ secrets.GITHUB_TOKEN }}
                   body: ${{ steps.changelog_reader.outputs.changes }}
 
@@ -54,6 +55,24 @@ jobs:
               with:
                   name: uploads
                   path: tpy
+
+    macos-linux:
+        runs-on: macos-latest
+
+        steps:
+            - uses: actions/checkout@v2
+
+            - name: Build for linux
+              run: cargo build --release
+
+            - name: Rename binary
+              run: mv target/release/templify tpy
+
+            - name: upload linux artifact
+              uses: actions/upload-artifact@v1
+              with:
+                  name: uploads
+                  path: tpy_macos
 
     build-windows:
         runs-on: windows-latest
