--- a/.github/workflows/on_release.yml
+++ b/.github/workflows/on_release.yml
@@ -9,6 +9,9 @@ env:
     CARGO_TERM_COLOR: always
 
 jobs:
+
+    tests:
+      uses: cophilot/templify/.github/workflows/check_rust_quality.yml
     upload-release:
         runs-on: ubuntu-latest
         needs: [build-linux, build-windows, macos-linux]
