--- a/.github/workflows/on_release.yml
+++ b/.github/workflows/on_release.yml
@@ -10,12 +10,14 @@ env:
 
 jobs:
 
-    tests:
-      uses: cophilot/templify/.github/workflows/check_rust_quality.yml
+    quality-check:
+      uses: ./.github/workflows/check_rust_quality.yml
+      with:
+        branch: master
+
     upload-release:
         runs-on: ubuntu-latest
         needs: [build-linux, build-windows, macos-linux]
-
         steps:
             - uses: actions/checkout@v2
 
@@ -43,7 +45,7 @@ jobs:
 
     build-linux:
         runs-on: ubuntu-latest
-
+        needs: [quality-check]
         steps:
             - uses: actions/checkout@v2
 
@@ -61,7 +63,7 @@ jobs:
 
     macos-linux:
         runs-on: macos-latest
-
+        needs: [quality-check]
         steps:
             - uses: actions/checkout@v2
 
@@ -79,7 +81,7 @@ jobs:
 
     build-windows:
         runs-on: windows-latest
-
+        needs: [quality-check]
         steps:
             - uses: actions/checkout@v2
 
