--- a/.github/workflows/check_rust_quality.yml
+++ b/.github/workflows/check_rust_quality.yml
@@ -20,7 +20,7 @@ jobs:
         steps:
             - uses: actions/checkout@v2
               with:
-                  ref: ${{ github.event.inputs.branch || 'dev' }}
+                  ref: ${{ inputs.branch || 'dev' }}
 
             - name: Print branch
               run: git branch
