--- a/.github/workflows/on_release.yml
+++ b/.github/workflows/on_release.yml
@@ -9,17 +9,18 @@ env:
     CARGO_TERM_COLOR: always
 
 jobs:
-
     quality-check:
-      uses: ./.github/workflows/check_rust_quality.yml
-      with:
-        branch: master
+        uses: ./.github/workflows/check_rust_quality.yml
+        with:
+            branch: master
 
     upload-release:
         runs-on: ubuntu-latest
         needs: [build-linux, build-windows, macos-linux]
         steps:
             - uses: actions/checkout@v2
+              with:
+                  ref: master
 
             - name: download artifacts
               uses: actions/download-artifact@v1
@@ -48,6 +49,8 @@ jobs:
         needs: [quality-check]
         steps:
             - uses: actions/checkout@v2
+              with:
+                  ref: master
 
             - name: Build for linux
               run: cargo build --release
@@ -66,6 +69,8 @@ jobs:
         needs: [quality-check]
         steps:
             - uses: actions/checkout@v2
+              with:
+                  ref: master
 
             - name: Build for linux
               run: cargo build --release
@@ -84,6 +89,8 @@ jobs:
         needs: [quality-check]
         steps:
             - uses: actions/checkout@v2
+              with:
+                  ref: master
 
             - name: Build for windows
               run: cargo build --release
