--- a/.github/workflows/check_rust_quality.yml
+++ b/.github/workflows/check_rust_quality.yml
@@ -22,14 +22,11 @@ jobs:
               with:
                   ref: ${{ inputs.branch || 'dev' }}
 
-            - name: Print branch
-              run: git branch
-
             - name: Check formatting
-              run: ./scripts/format:check
+              run: ./scripts/format-check
 
             - name: Check for missing comments
-              run: ./scripts/comment:check
+              run: ./scripts/comment-check
 
             - name: Run linter
               run: ./scripts/lint
@@ -38,6 +35,7 @@ jobs:
               run: ./scripts/test
 
             - name: Merge to master branch
+              if: ${{ inputs.branch == 'dev' }}
               uses: peter-evans/create-pull-request@v3
               with:
                   token: ${{ secrets.GITHUB_TOKEN }}
