--- a/.github/workflows/on_release.yml
+++ b/.github/workflows/on_release.yml
@@ -16,7 +16,7 @@ jobs:
 
     upload-release:
         runs-on: ubuntu-latest
-        needs: [build-linux, build-windows, macos-linux]
+        needs: [build-linux, build-windows, build-macos]
         steps:
             - uses: actions/checkout@v2
               with:
@@ -64,7 +64,7 @@ jobs:
                   name: uploads
                   path: tpy-linux
 
-    macos-linux:
+    build-macos:
         runs-on: macos-latest
         needs: [quality-check]
         steps:
@@ -72,7 +72,7 @@ jobs:
               with:
                   ref: master
 
-            - name: Build for linux
+            - name: Build for macOS
               run: cargo build --release
 
             - name: Rename binary
