--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ reqwest = { version = "0.12", features = ["blocking", "json"] }
 self-replace = "1.3.6"
 serde_json = "1.0.1"
 chrono = "0.4.19"
+base64 = "0.21.7"
