--- a/.github/workflows/check_rust_quality.yml
+++ b/.github/workflows/check_rust_quality.yml
@@ -3,6 +3,8 @@ name: Run rust quality checks
 on:
     push:
         branches: ['*']
+    pull_request:
+        branches: ['*']
     workflow_call:
         inputs:
             branch:
