using fixed rust version - 1.0.0

--- a/.github/workflows/check_rust_quality.yml
+++ b/.github/workflows/check_rust_quality.yml
@@ -22,6 +22,12 @@ jobs:
             - uses: actions/checkout@v2
               with:
                   ref: ${{ inputs.branch || github.ref }}
+            
+            - name: Set up Rust
+              uses: actions-rs/toolchain@v1
+              with:
+                  toolchain: 1.82.0
+                  override: true
 
             - name: Check formatting
               run: ./scripts/format-check
