--- a/.github/workflows/on_release.yml
+++ b/.github/workflows/on_release.yml
@@ -28,6 +28,9 @@ jobs:
             - name: List artifacts
               run: ls -la
 
+            - name: List windows dir
+              run: ls -la windows
+
             - name: Get Changelog Entry
               id: changelog_reader
               uses: mindsers/changelog-reader-action@v2
@@ -40,9 +43,9 @@ jobs:
               uses: ncipollo/release-action@v1
               with:
                   artifacts: |
-                      tpy.exe
-                      tpy-linux
-                      tpy-macos
+                      windows/tpy.exe
+                      linux/tpy-linux
+                      macos/tpy-macos
                   token: ${{ secrets.GITHUB_TOKEN }}
                   body: ${{ steps.changelog_reader.outputs.changes }}
 
@@ -63,7 +66,7 @@ jobs:
             - name: upload linux artifact
               uses: actions/upload-artifact@v4
               with:
-                  name: tpy-linux
+                  name: linux
                   path: tpy-linux
 
     build-macos:
@@ -83,7 +86,7 @@ jobs:
             - name: upload macos artifact
               uses: actions/upload-artifact@v4
               with:
-                  name: tpy-macos
+                  name: macos
                   path: tpy-macos
 
     build-windows:
@@ -103,5 +106,5 @@ jobs:
             - name: upload windows artifact
               uses: actions/upload-artifact@v4
               with:
-                  name: tpy.exe
+                  name: windows
                   path: tpy.exe
